--- a/build.xml
+++ b/build.xml
@@ -1,10 +1,11 @@
-<project name="HelloWorld" basedir="." default="main">
+<project name="MissleCommand" basedir="." default="main">
 
     <property name="src.dir"     value="src"/>
 
     <property name="build.dir"   value="build"/>
     <property name="classes.dir" value="${build.dir}/classes"/>
     <property name="jar.dir"     value="${build.dir}/jar"/>
+    <property name="resources.dir"     value="res/assets"/>
 
     <property name="main-class"  value="missilecommand.MissileCommand"/>
 
@@ -25,15 +26,12 @@
             <manifest>
                 <attribute name="Main-Class" value="${main-class}"/>
             </manifest>
+    	    <fileset dir="${resources.dir}" />
         </jar>
     </target>
-
-    <target name="run" depends="jar">
-        <java jar="${jar.dir}/${ant.project.name}.jar" fork="true"/>
-    </target>
-
+ 
     <target name="clean-build" depends="clean,jar"/>
 
-    <target name="main" depends="clean,run"/>
+    <target name="main" depends="clean"/>
 
 </project>
