--- a/build.xml
+++ b/build.xml
@@ -8,8 +8,11 @@
     <property name="resources.dir"     value="res/assets"/>
 
     <property name="main-class"  value="missilecommand.MissileCommand"/>
-
-
+    
+    <target name="run" depends="clean-build">
+        <java jar="${jar.dir}/${ant.project.name}.jar" fork="true">       
+        </java>
+    </target>
 
     <target name="clean">
         <delete dir="${build.dir}"/>
